--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
-
     ext {
-        kotlin_version = '1.3.31'
-        retrofit_version = '2.4.0'
+        kotlin_version = '1.6.0'
+        retrofit_version = '2.9.0'
         dagger_version = '2.21'
         android_support_version = '1.0.0'
         android_support_constraint_version = '1.1.2'
-        play_core_version = '1.5.0'
+        coroutines_version = '1.5.0'
+        hilt_version = '2.38.1'
 
         libs = [
                 retrofit       : "com.squareup.retrofit2:retrofit:$retrofit_version",
                 rxjava         : ['io.reactivex.rxjava2:rxjava:2.1.9', 'io.reactivex.rxjava2:rxandroid:2.0.1'],
                 dagger         : "com.google.dagger:dagger:$dagger_version",
-                daggerCompailer: "com.google.dagger:dagger-compiler:$dagger_version"
+                daggerCompailer: "com.google.dagger:dagger-compiler:$dagger_version",
+                hilt           : "com.google.dagger:hilt-android:$hilt_version",
+                hiltCompailer  : "com.google.dagger:hilt-compiler:$hilt_version"
         ]
 
         support = [
@@ -31,39 +32,25 @@ buildscript {
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-apply plugin: 'kotlin'
 
-allprojects {
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
+allprojects{
     repositories {
         google()
-        jcenter()
-    }
-}
-
-/*task clean(type: Delete) {
-    delete rootProject.buildDir
-}*/
-
-repositories {
-    mavenCentral()
-}
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
+        mavenCentral()
     }
 }
