--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    buildFeatures {
+        viewBinding true
+    }
     bundle {
         density {
             // Different APKs are generated for devices with different screen densities; true by default.
@@ -73,6 +76,7 @@ dependencies {
     implementation project(":data")
 
     //Android Support Dependencies
+    implementation support.activity
     implementation support.appcompat
     implementation support.constraint
     implementation support.recyclerView
@@ -81,7 +85,6 @@ dependencies {
 
     //Retrofit Dependencies
     implementation libs.retrofit
-    implementation libs.rxjava
 
     //hilt Dependencies
     implementation libs.hilt
