--- a/build.gradle
+++ b/build.gradle
@@ -12,17 +12,16 @@ buildscript {
 
         libs = [
                 retrofit       : "com.squareup.retrofit2:retrofit:$retrofit_version",
-                rxjava         : ['io.reactivex.rxjava2:rxjava:2.1.9', 'io.reactivex.rxjava2:rxandroid:2.0.1'],
-                dagger         : "com.google.dagger:dagger:$dagger_version",
-                daggerCompailer: "com.google.dagger:dagger-compiler:$dagger_version",
                 hilt           : "com.google.dagger:hilt-android:$hilt_version",
                 hiltCompailer  : "com.google.dagger:hilt-compiler:$hilt_version"
         ]
 
         support = [
+                activity    : "androidx.activity:activity-ktx:1.1.0",
                 constraint  : "androidx.constraintlayout:constraintlayout:$android_support_constraint_version",
                 appcompat   : "androidx.appcompat:appcompat:$android_support_version",
-                recyclerView: "androidx.recyclerview:recyclerview:$android_support_version"
+                recyclerView: "androidx.recyclerview:recyclerview:$android_support_version",
+                coroutines  : 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9',
         ]
 
         tests = [
@@ -48,7 +47,7 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-allprojects{
+allprojects {
     repositories {
         google()
         mavenCentral()
