--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,7 +9,6 @@ java {
 }
 
 dependencies {
+    implementation support.coroutines
     implementation libs.retrofit
-    implementation libs.rxjava
-    implementation libs.dagger
 }
