--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,12 @@ buildscript {
         android_support_constraint_version = '1.1.2'
         coroutines_version = '1.5.0'
         hilt_version = '2.38.1'
+        nav_version = "2.3.5"
 
         libs = [
-                retrofit       : "com.squareup.retrofit2:retrofit:$retrofit_version",
-                hilt           : "com.google.dagger:hilt-android:$hilt_version",
-                hiltCompailer  : "com.google.dagger:hilt-compiler:$hilt_version"
+                retrofit     : "com.squareup.retrofit2:retrofit:$retrofit_version",
+                hilt         : "com.google.dagger:hilt-android:$hilt_version",
+                hiltCompailer: "com.google.dagger:hilt-compiler:$hilt_version"
         ]
 
         support = [
@@ -22,6 +23,8 @@ buildscript {
                 appcompat   : "androidx.appcompat:appcompat:$android_support_version",
                 recyclerView: "androidx.recyclerview:recyclerview:$android_support_version",
                 coroutines  : 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9',
+                navFragment : "androidx.navigation:navigation-fragment-ktx:$nav_version",
+                navUi       : "androidx.navigation:navigation-ui-ktx:$nav_version",
         ]
 
         tests = [
